# mezonya-ml

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
api/: main.py
data/: compatibility_dataset.csv  device_catalog.json  foria_devices.json  generate_dataset.py
data/collectors/: README.md  collect_home_assistant.py  collect_matter_csa.py  merge_catalogs.py  run_all.py
docs/: ACCESSIBILITY.md  API.md  DATASET.md  MODEL_CARD.md
models/: category_encoder.pkl  metrics.json  model.pkl  model_20260418_072412.pkl  model_20260418_081720.pkl  model_config.json
notebooks/: exploration.ipynb
schemas/: device.schema.json
scripts/: monitor.py  retrain.py  train.py
tests/: conftest.py  test_catalog_schema_validity.py  test_model.py  test_monitor.py  test_retrain.py
